--- a/public/global.css
+++ b/public/global.css
@@ -1,13 +1,19 @@
+/*          General           */
 body {
   font-family: 'Rokkitt', serif;
 }
 
-#front_banner {
+.front_banner {
   background-color: #2c4947;
   width: 100%;
 }
 
-#front_banner img {
+
+/*        Positioning         */
+
+
+
+.front_banner img {
   width:150px;  
   height: auto;
   position: relative; 
@@ -15,20 +21,20 @@ body {
   left: 5%;
 }
 
-#front_flyer {
+.front_flyer {
   position: relative;
   overflow: hidden;
   color: #354961;
 }
 
-#mountains {
+.mountains {
   background-image: url("/assets/mountains.jpg");
   height: 450px;
   background-size: cover;
   background-position: center;
 }
 
-#Barcamp_2014 {
+.Barcamp_2014 {
   position: absolute;
   width: 200px;
   top: 8%;
@@ -37,7 +43,7 @@ body {
   z-index: 1;
 }
 
-#lake {
+.lake {
   position: absolute;
   width: 700px;
   top: 15%;
@@ -45,7 +51,7 @@ body {
   margin-left: -350px;  
 }
 
-#trees {
+.trees {
   position: absolute;
   height: 100%;
   top: 0%;
@@ -53,7 +59,7 @@ body {
   margin-left: -404px;
 }
 
-#front_flyer h2 {
+.front_flyer h2 {
   position: absolute;
   left: 50%;
   margin-left: -48px;
@@ -61,7 +67,7 @@ body {
   z-index: 2;
 }
 
-#date {
+.date {
   position: absolute;
   width: 150px;
   top: 85%;
@@ -69,7 +75,7 @@ body {
   margin-left: -75px;
 }
 
-#front_flyer p {
+.front_flyer p {
   position: absolute;
   left: 50%;
   margin-left: -71px;
@@ -78,7 +84,7 @@ body {
   font-size: 20px;
 }
 
-#front_flyer h1 {
+.front_flyer h1 {
   position: absolute;
   left: 50%;
   margin-left: -47px;
@@ -86,30 +92,30 @@ body {
   z-index: 2;
 }
 
-#front_footer {
+.front_footer {
   background-color: #43504C;
 }
 
-#front_footer img {
+.front_footer img {
   width: 200px;
   position: relative;
   left: 50%;
   margin-left: -100px;
 }
 
-#front_register {
+.front_register {
   position: relative;
-  top: 60px;
+  margin-top: 60px;
 }
 
-#button_background {
+.button_background {
   width: 347px;
   position: relative;
   left: 50%;
   margin-left: -173.5px;
 }
 
-#front_register_button {
+.front_register_button {
   width: 120px;
   border-radius: 28px;
   color: #ffffff;
@@ -125,7 +131,7 @@ body {
   top: 20px;
 }
 
-#front_bird {
+.front_bird {
   height: 40px;
   position: absolute;
   top: -20px;
@@ -133,7 +139,7 @@ body {
   margin-left: -24.5px;
 }
 
-#front_button h1 {
+.front_button h1 {
   position: absolute;
   top: 35px;
   left: 50%;
