--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -1,48 +1,34 @@
-<!doctype html>
 
-<html>
-  <head>
-    <title>BarCamp</title>
+<div class="front_page">
+  <header class="front_banner">
+    <img src="http://i.imgur.com/7ZZmPKP.png" alt="Banner for BC Omaha 2014">
+  </header>
 
-    <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="global.css">
-  </head>
-  
-  <body>
-    <div id="front_page">
-      <header id="front_banner">
-        <img src="http://i.imgur.com/7ZZmPKP.png" alt="Banner for BC Omaha 2014">
-      </header>
-      
-      <div id="front_flyer">
-        <div id="mountains"></div>
-        <img id="Barcamp_2014" src="/assets/hero_logo.png" alt="BarCamp 2014, Omaha Nebraska">
-        <img id="lake" src="/assets/lake.png" alt="Sunset Lake">
-        <img id="trees" src="/assets/trees.png" alt="Campground Trees with Banners">
-        <h2>KANEKO</h2>
-        <p>Omaha, Nebraska</p>
-        <img id="date" src="/assets/date.png">
-      </div>
-      
-      <div id="front_footer">
-        <img src="/assets/aiga.png" alt="Partnership with AIGA Nebraska">
-      </div>
-    </div>
-      
-    <div id="front_register">
-      <div id="front_button">
-        <img id="button_background" src="/assets/buttonLines.png" alt="Background lines">
-        <div id="front_register_button">Register Today</div>
-        <img id="front_bird" src="/assets/bird.png">
-        <h1><span class="d-sign">$</span>15</h1>
-      </div>
-    </div>
-    
-    <div id="front_info">
-      <h1>At BarCamp, you don't have to be an expert to give a talk</h1>
-      <p>You just have to be passionate. At BarCamp, you won't find a predetermined speaker list or a line of suits passing out business cards. What you will find is some shaggy dude in a t-shirt talking about moonshine, a web developer talking about the best practices in SEO, or a world traveler sharing their experiences. BarCamp is a change to network, learn something new, and communicate what you're most passionate about. Come one, come all.</p>
-    </div>
-      
-  </body>
-  
-</html>
+  <div class="front_flyer">
+    <div class="mountains"></div>
+    <img class="Barcamp_2014" src="/assets/hero_logo.png" alt="BarCamp 2014, Omaha Nebraska">
+    <img class="lake" src="/assets/lake.png" alt="Sunset Lake">
+    <img class="trees" src="/assets/trees.png" alt="Campground Trees with Banners">
+    <h2>KANEKO</h2>
+    <p>Omaha, Nebraska</p>
+    <img class="date" src="/assets/date.png">
+  </div>
+
+  <div class="front_footer">
+    <img src="/assets/aiga.png" alt="Partnership with AIGA Nebraska">
+  </div>
+</div>
+
+<div class="front_register">
+  <div class="front_button">
+    <img class="button_background" src="/assets/buttonLines.png" alt="Background lines">
+    <div class="front_register_button">Register Today</div>
+    <img class="front_bird" src="/assets/bird.png">
+    <h1><span class="d-sign">$</span>15</h1>
+  </div>
+</div>
+
+<div class="front_info">
+  <h1>At BarCamp, you don't have to be an expert to give a talk</h1>
+  <p>You just have to be passionate. At BarCamp, you won't find a predetermined speaker list or a line of suits passing out business cards. What you will find is some shaggy dude in a t-shirt talking about moonshine, a web developer talking about the best practices in SEO, or a world traveler sharing their experiences. BarCamp is a change to network, learn something new, and communicate what you're most passionate about. Come one, come all.</p>
+</div>
