--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -26,9 +26,12 @@
     <img class="front_bird" src="/assets/bird.png">
     <h1><span class="d-sign">$</span>15</h1>
   </div>
+
+
+  <div class="front_info">
+    <h1>At BarCamp, you don't have to be an expert to give a talk</h1>
+    <p>You just have to be passionate. At BarCamp, you won't find a predetermined speaker list or a line of suits passing out business cards. What you will find is some shaggy dude in a t-shirt talking about moonshine, a web developer talking about the best practices in SEO, or a world traveler sharing their experiences. BarCamp is a change to network, learn something new, and communicate what you're most passionate about. Come one, come all.</p>
+  </div>
 </div>
 
-<div class="front_info">
-  <h1>At BarCamp, you don't have to be an expert to give a talk</h1>
-  <p>You just have to be passionate. At BarCamp, you won't find a predetermined speaker list or a line of suits passing out business cards. What you will find is some shaggy dude in a t-shirt talking about moonshine, a web developer talking about the best practices in SEO, or a world traveler sharing their experiences. BarCamp is a change to network, learn something new, and communicate what you're most passionate about. Come one, come all.</p>
-</div>
+<div class="break" ></div>
