editted talks h1 and margin

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -19,7 +19,7 @@
   </div>
 </div>
 
-<div class="front_register">
+<div class="front_register h1-margin">
   <div class="front_button">
     <img class="button_background" src="/assets/buttonLines.png" alt="Background lines">
     <div class="front_register_button">Register Today</div>
@@ -35,3 +35,12 @@
 </div>
 
 <div class="break" ></div>
+
+<div class="talks h1-margin">
+  <h1>Talks are organized into one of four speaking categories.</h1>
+  <h1>Some possible talks may include:</h1>
+</div>
+
+<div>
+  <%= yield %>
+</div>
