--- a/public/global.css
+++ b/public/global.css
@@ -119,7 +119,6 @@ body {
 
 .front_register {
   position: relative;
-  margin: 60px 5%;
 }
 
 
@@ -184,14 +183,21 @@ body {
   border-color: #6b797f;
   width: 100%;
   border-size: 3px;
+  margin: 50px 0;
 }
 
 
+.h1-margin {
+  margin: 60px 5%;
+}
 
+.talks {
+  text-align: center;
+}
 
-
-
-
+.talks h1 {
+  margin: 0;
+}
 
 
 
