--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,7 @@
   <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="text.css">
 </head>
 
 <body>
