--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -24,7 +24,7 @@
     <img class="button_background" src="/assets/buttonLines.png" alt="Background lines">
     <div class="front_register_button">Register Today</div>
     <img class="front_bird" src="/assets/bird.png">
-    <h1><span class="d-sign">$</span>15</h1>
+    <h1><span class="d-sign">$</h2>15</h1>
   </div>
 
 
@@ -44,5 +44,139 @@
 <div>
 
   <%= erb :"view-talks" %>
+
+</div>
+
+
+<div class="event_schedule">
+  <div class="change_width">
+    <div class="event_header">
+      <img id="schedule_image" src="/assets/schedule.png" alt="Event Schedule">
+    </div>
+    <div class="date_header">
+      <h1>Friday,</h1>
+      <h1>September 5</h1>
+      <h1>2014</h1>
+      <h4>House of Loom, 1012 S. 10th St &middot; Omaha, NE 68108</h4>
+    </div>
+
+    <div class="event">
+      <div class="circle">
+        <h1>7</h1>
+        <h2>PM</h2>
+      </div>
+
+      <div class="event_info">
+        <h1>Open Party Starts</h1>
+        <p>Show up, relax, mingle with other BarCampers and have a drink on our opening party sponsor!</p>
+      </div>
+    </div>
+
+
+    <div class="event">
+
+      <div class="circle">
+        <h1>12</h1>
+        <h2>AM</h2>
+      </div>
+
+      <div class="event_info">
+        <h1>Keep Gettin' Turn't Up</h1>
+        <p>Continue showing up, relaxing, mingling with other BarCampers and having more drinks on our opening party sponsor!</p>
+      </div>
+    </div>
+
+    <div class="event">
+
+      <div class="circle">
+        <h1>2</h1>
+        <h2>AM</h2>
+      </div>
+
+      <div class="event_info">
+        <h1>Go Home!</h1>
+        <p>Drive safely, take a cab or call in a Lyft. Just show up tomorrow in one piece. :)</p>
+      </div>
+    </div>
+
+    <img class="fire" src="assets/fire.png">
+
+    <div class="date_header">
+      <h1>Saturday,</h1>
+      <h1>September 6</h1>
+      <h1>2014</h1>
+      <h4>Kaneko, 1111 Jones St • Omaha, NE 68102</h4>
+    </div>
+
+    <div class="event">
+      <div class="circle">
+        <h1>8</h1>
+        <h2>AM</h2>
+      </div>
+      <div class="event_info">
+        <h1>Breakfast / Sign Up For Talks</h1>
+        <p>Grab some breakfast and coffee, sign up for a talk, and start the day getting to know your fellow BarCampers.</p>
+      </div>
+    </div>
+
+    <div class="event">
+      <div class="circle">
+        <h1>9</h1>
+        <h2>AM</h2>
+      </div>
+      <div class="event_info">
+        <h1>Morning Talks Begin</h1>
+        <p>We'll start out the first round of talks promptly at 9am, so make sure you're all settled in and ready to learn!</p>
+      </div>
+    </div>
+
+    <div class="event">
+      <div class="circle">
+        <h1>12</h1>
+        <h2>PM</h2>
+      </div>
+      <div class="event_info">
+        <h1>Lunch / Networking</h1>
+        <p>Hang out with your new BarCamp friends and enjoy a delicious lunch provided by a local restaurant.</p>
+      </div>
+    </div>
+
+    <div class="event">
+      <div class="circle">
+        <h1>1</h1>
+        <h2>PM</h2>
+      </div>
+      <div class="event_info">
+        <h1>Afternoon Talks Begin</h1>
+        <p>At 1pm, we'll reconvene for our afternoon session of talks!</p>
+      </div>
+    </div>
+
+    <div class="event">
+      <div class="circle">
+        <h1>5</h1>
+        <h2>PM</h2>
+      </div>
+      <div class="event_info">
+        <h1>Closing</h1>
+        <p>Say your goodbyes, collect addresses for your new pen pals, and start looking forward to next year.</p>
+      </div>
+    </div>
+    <div class="space"></div>
+    
+  </div>
+</div>
+
+
+<div class="faq">
+  <img id="faq-img" src="assets/faq.png">
+  <ul class="no_bullet">
+    <li class="plus">What am I paying $15 for?</li>
+    <li class="plus">Do I have to give a talk?</li>
+    <li class="plus">What should I bring?</li>
+    <li class="plus">How long are the talks?</li>
+    <li class="plus">Can I give a sales presentation?</li>
+  </ul>
+  <img id="tower" src="assets/tower.png">
 
 </div>
