--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -180,3 +180,14 @@
   <img id="tower" src="assets/tower.png">
 
 </div>
+
+
+
+<div class="register-bottom" >
+  <div class="sign-post">
+    <img src="assets/signpost.png">
+  </div>
+  <div class="hill-front">
+    <img src="assets/hillFront.png">
+  </div>
+</div>
